--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                   <img src="https://i.ibb.co/FJx3BVJ/image.jpg" alt="Daniel lewis" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Daniel lewis</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Upol Saha</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
