--- a/index.html
+++ b/index.html
@@ -516,12 +516,14 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">No professional experience yet</h4>
+              <h4 class="h4 timeline-item-title">Self-Taught Programmer</h4>
 
-              <span>—</span>
+              <span>2023 — Present</span>
 
               <p class="timeline-text">
-                Currently focusing on academic studies and personal development, with plans for future professional opportunities.
+                In 2023, I started my journey into programming and quickly developed a passion for coding. I began by mastering the basics of HTML, CSS, and JavaScript to build interactive web pages and simple projects. As my knowledge grew, I delved into backend development, experimenting with Node.js and databases like MongoDB. 
+
+                My coding journey has involved creating a wide range of personal projects, from dynamic websites to bots using Messenger’s Goatbot. I continuously challenge myself to learn new frameworks, improve problem-solving skills, and contribute to open-source projects, refining both my technical and teamwork skills.
               </p>
 
             </li>
