--- a/index.html
+++ b/index.html
@@ -440,165 +440,166 @@
 
 
 
+
 <!--
-        - #RESUME
-      -->
+    - #RESUME
+  -->
 
-      <article class="resume" data-page="resume">
+  <article class="resume" data-page="resume">
 
-        <header>
-          <h2 class="h2 article-title">Resume</h2>
-        </header>
+    <header>
+      <h2 class="h2 article-title">Resume</h2>
+    </header>
 
-        <section class="timeline">
+    <section class="timeline">
+
+      <div class="title-wrapper">
+        <div class="icon-box">
+          <ion-icon name="book-outline"></ion-icon>
+        </div>
+
+        <h3 class="h3">Education</h3>
+      </div>
+
+      <ol class="timeline-list">
+
+        <li class="timeline-item">
+
+          <h4 class="h4 timeline-item-title">First School Enrollment</h4>
+
+          <span>2014 — 2020</span>
+
+          <p class="timeline-text">
+            Began my educational journey in 2014, attending primary school and developing foundational skills in reading,
+            writing, and mathematics. This was the start of my passion for learning.
+          </p>
+
+        </li>
+
+        <li class="timeline-item">
+
+          <h4 class="h4 timeline-item-title">Middle School</h4>
+
+          <span>2020 — Present</span>
+
+          <p class="timeline-text">
+            Currently attending middle school, where I am exploring new subjects, engaging in extracurricular activities,
+            and enhancing my academic knowledge. It's also where I first discovered my interest in technology.
+          </p>
+
+        </li>
+
+      </ol>
+
+    </section>
+
+    <section class="timeline">
+
+      <div class="title-wrapper">
+        <div class="icon-box">
+          <ion-icon name="briefcase-outline"></ion-icon>
+        </div>
+
+        <h3 class="h3">Experience</h3>
+      </div>
+
+      <ol class="timeline-list">
+
+        <li class="timeline-item">
+
+          <h4 class="h4 timeline-item-title">Self-Taught Programmer</h4>
+
+          <span>2023 — Present</span>
+
+          <p class="timeline-text">
+            Began coding in 2023, quickly gaining proficiency in web development, scripting, and bot creation. Familiar with
+            languages such as HTML, CSS, JavaScript, and working on backend technologies like Node.js. Created various
+            personal projects, including interactive websites and bots.
+          </p>
+
+        </li>
+
+      </ol>
+
+    </section>
+
+    <section class="skill">
+
+      <h3 class="h3 skills-title">My skills</h3>
+
+      <ul class="skills-list content-card">
+
+        <li class="skills-item">
 
           <div class="title-wrapper">
-            <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
-            </div>
-
-            <h3 class="h3">Education</h3>
+            <h5 class="h5">Web Development</h5>
+            <data value="45">45%</data>
           </div>
 
-          <ol class="timeline-list">
+          <div class="skill-progress-bg">
+            <div class="skill-progress-fill" style="width: 45%;"></div>
+          </div>
 
-            <li class="timeline-item">
+        </li>
 
-              <h4 class="h4 timeline-item-title">High School</h4>
-
-              <span>2024 — Present</span>
-
-              <p class="timeline-text">
-                Currently attending high school, focusing on various academic subjects and extracurricular activities.
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Middle School</h4>
-
-              <span>2017 — 2024</span>
-
-              <p class="timeline-text">
-                Completed middle school education, gaining a strong foundation in science, math, and language arts.
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Primary School</h4>
-
-              <span>2014 — 2017</span>
-
-              <p class="timeline-text">
-                Began formal education in 2014, learning basic skills in reading, writing, and arithmetic.
-              </p>
-
-            </li>
-
-          </ol>
-
-        </section>
-
-        <section class="timeline">
+        <li class="skills-item">
 
           <div class="title-wrapper">
-            <div class="icon-box">
-              <ion-icon name="briefcase-outline"></ion-icon>
-            </div>
-
-            <h3 class="h3">Experience</h3>
+            <h5 class="h5">JavaScript</h5>
+            <data value="20">20%</data>
           </div>
 
-          <ol class="timeline-list">
+          <div class="skill-progress-bg">
+            <div class="skill-progress-fill" style="width: 20%;"></div>
+          </div>
 
-            <li class="timeline-item">
+        </li>
 
-              <h4 class="h4 timeline-item-title">Self-Taught Programmer</h4>
+        <li class="skills-item">
 
-              <span>2023 — Present</span>
+          <div class="title-wrapper">
+            <h5 class="h5">Bot Development</h5>
+            <data value="70">70%</data>
+          </div>
 
-              <p class="timeline-text">
-                In 2023, I started my journey into programming and quickly developed a passion for coding. I began by mastering the basics of HTML, CSS, and JavaScript to build interactive web pages and simple projects. As my knowledge grew, I delved into backend development, experimenting with Node.js and databases like MongoDB. 
+          <div class="skill-progress-bg">
+            <div class="skill-progress-fill" style="width: 70%;"></div>
+          </div>
 
-                My coding journey has involved creating a wide range of personal projects, from dynamic websites to bots using Messenger’s Goatbot. I continuously challenge myself to learn new frameworks, improve problem-solving skills, and contribute to open-source projects, refining both my technical and teamwork skills.
-              </p>
+        </li>
 
-            </li>
+        <li class="skills-item">
 
-          </ol>
+          <div class="title-wrapper">
+            <h5 class="h5">Node.js</h5>
+            <data value="30">30%</data>
+          </div>
 
-        </section>
+          <div class="skill-progress-bg">
+            <div class="skill-progress-fill" style="width: 30%;"></div>
+          </div>
 
-      </article>
+        </li>
 
+        <li class="skills-item">
 
+          <div class="title-wrapper">
+            <h5 class="h5">HTML & CSS</h5>
+            <data value="80">80%</data>
+          </div>
 
-        <section class="skill">
+          <div class="skill-progress-bg">
+            <div class="skill-progress-fill" style="width: 80%;"></div>
+          </div>
 
-          <h3 class="h3 skills-title">My skills</h3>
+        </li>
 
-          <ul class="skills-list content-card">
+      </ul>
 
-            <li class="skills-item">
+    </section>
 
-              <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="25">25%</data>
-              </div>
+  </article>
 
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
-                <data value="7">7%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="9">9%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="5">5%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
-              </div>
-
-            </li>
-
-          </ul>
-
-        </section>
-
-      </article>
 
 
 
